deploys/docker-registry.yaml


################################## 
### Registry
apiVersion: apps/v1
kind: Deployment
metadata:
  name: docker-registry
  namespace: docker-registry
spec:
  replicas: 1
  selector:
    matchLabels:
      component: docker-registry
  template:
    metadata:
      labels:
        component: docker-registry 
    spec:
      volumes:
        - name: docker-auth-volume
          secret:
            secretName: docker-registry-auth-secret
        - name: docker-certs-volume
          secret:
            secretName: docker-registry-certs-secret
        - name: docker-registry-database-volume
          persistentVolumeClaim:
            claimName: docker-registry-pvc
      containers:
        - name: docker-registry
          image: registry:latest
          ports:
            - containerPort: 5000
          volumeMounts:
          - name: docker-auth-volume
            mountPath: "/auth"
          - name: docker-certs-volume
            mountPath: "/certs"
          # - name: docker-registry-database-volume
          #   mountPath: "/var/lib/registry"
---

################################## 
### Service

apiVersion: v1
kind: Service
metadata:
  name: docker-registry-service
  namespace: docker-registry
spec:
  type: NodePort
  selector:
    component: docker-registry
  ports:
    - port: 5000
      targetPort: 5000
      nodePort: __DOCKER_PORT__
---
