deploys/docker-ingress.yaml

################################## 
### Ingress
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: docker-registry-ingress
  namespace: docker-registry
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  ingressClassName: traefik
  tls:
  - hosts:
    - __DOMAIN__
    secretName: tls-docker-registry
  rules:
  - host: __DOMAIN__
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: docker-registry-service
            port:
              number: __DOCKER_PORT__
